# SentinelBot

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SPECS.md  TODO.md  alerts.py  coin_list_cache.json  dev.py  logger_config.py  main.py  pyproject.toml  requirements.txt  setup.cfg  test.py  trending_analysis.py  trending_tracker.py
.github/workflows/: release.yml
cogs/: admin.py  crypto.py  help.py  start.py
config/: settings.py
data/: db.py  models.py
mflow/: money_flow.py
scripts/: init_db.py
utils/: batch_processor.py  cache.py  calcs.py  chart.py  context_gatherer.py  crypto_data.py  decorators.py  exchange_manager.py  llm_service.py  paginators.py
