[tool.poetry]
name = "sentinelbot"
version = "0.1.0"
description = ""
authors = ["AccursedGalaxy <robinbohrer7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.9.3"
ccxt = "^4.4.42"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
propcache = "^0.2.1"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.0"
ta = "^0.11.0"
black = "^24.10.0"
ruff = "^0.8.4"
mypy = "^1.14.0"
pytest = "^8.3.4"
plotly = "^6.0.0"
colorlog = "^6.9.0"
matplotlib = "^3.10.1"
kaleido = "0.2.1"
openai = "^1.65.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
